--- a/univedu/assets/css/colors/coffee.css
+++ b/univedu/assets/css/colors/coffee.css
@@ -1,3 +1,7 @@
+.font-yellow{ 
+  color:#998675 !important ;
+}
+social-icons{background-color:#998675 !important ;}
 .heading-wrapper{
   background-color:#998675 !important ;
 }
