--- a/univedu/assets/css/colors/greensea.css
+++ b/univedu/assets/css/colors/greensea.css
@@ -1,4 +1,7 @@
 .heading-wrapper{background-color:#1ABC9C !important;}
+.font-yellow{
+   color:rgb(26, 42, 188) !important ;
+}
 #sideNav{background-color:#1ABC9C !important;}
 a{
   color: #1ABC9C;
