--- a/univedu/assets/css/colors/lightblue.css
+++ b/univedu/assets/css/colors/lightblue.css
@@ -1,5 +1,5 @@
 .heading-wrapper{background-color:#00D3F9 !important;}
-
+.font-yellow{ color:#00D3F9!important ;}
 #sideNav{background-color:#00D3F9 !important;}
 a{
   color: #00D3F9;
