--- a/univedu/assets/css/colors/red.css
+++ b/univedu/assets/css/colors/red.css
@@ -5,6 +5,8 @@
 a{
   color: #ff5959;
 }
+.social-icons{color:#ff5959 !important ;}
+.font-yellow{ color:#ff5959 !important ;}
 a:hover{
   color: #cc4b4b;
 }
