--- a/univedu/assets/css/colors/green.css
+++ b/univedu/assets/css/colors/green.css
@@ -1,7 +1,9 @@
 .heading-wrapper{
   background-color:#9C3 !important ;
 }
-
+.font-yellow{ 
+  color:#9C3 !important ;
+}
 #sideNav{background-color:#9C3 !important;}
 a{
 	color: #9C3;
