--- a/assets/css/colors/lightblue.css
+++ b/assets/css/colors/lightblue.css
@@ -8,6 +8,10 @@ a{
 a:hover{
   color: #04a8c6;
 }
+#MSactu{color: #00D3F9 !important; }
+#lienactu{
+  color:#00D3F9!important; 
+}
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #00D3F9;
 }
