--- a/assets/css/colors/red.css
+++ b/assets/css/colors/red.css
@@ -14,6 +14,10 @@ a:hover{
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #ff5959;
 }
+#MSactu{color: #ff5959 !important; }
+#lienactu{
+  color:#ff5959 !important; 
+}
 .navbar-engage .navbar-nav > li > a:hover,
 .navbar-engage .navbar-nav > li.active > a,
 .navbar-engage .navbar-nav > li.open > a,
