--- a/assets/css/colors/greensea.css
+++ b/assets/css/colors/greensea.css
@@ -10,6 +10,10 @@ a{
 a:hover{
   color: #0c9d80;
 }
+#MSactu{color: #1ABC9C !important; }
+#lienactu{
+  color:#1ABC9C!important; 
+}
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #1ABC9C;
 }
