--- a/assets/css/colors/mblue.css
+++ b/assets/css/colors/mblue.css
@@ -11,6 +11,10 @@ a{
 a:hover{
   color: #526b84;
 }
+#MSactu{color: #34495E !important; }
+#lienactu{
+  color:#34495E!important; 
+}
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #34495E;
 }
