--- a/assets/css/colors/wisteria.css
+++ b/assets/css/colors/wisteria.css
@@ -14,6 +14,10 @@ a:hover{
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #9B59B6;
 }
+#MSactu{color: #9B59B6 !important; }
+#lienactu{
+  color:#9B59B6 !important; 
+}
 .navbar-engage .navbar-nav > li > a:hover,
 .navbar-engage .navbar-nav > li.active > a,
 .navbar-engage .navbar-nav > li.open > a,
