--- a/assets/css/colors/coffee.css
+++ b/assets/css/colors/coffee.css
@@ -1,18 +1,23 @@
 .heading-wrapper{
   background-color:#1C1C1C !important ;
 }
+.bo4{
+  border: #1C1C1C !important; 
+}
 #btn_send{background-color:#1C1C1C!important ;}
 .font-yellow{ 
   color:#1C1C1C !important ;
 }
 #sideNav{background-color: #1C1C1C !important;}
-#MSactu{color: #1C1C1C !important; }
+#MSactu{color: #1C1C1C !important; 
+text-shadow: 1px 1px white ;}
 a{
   color: #1C1C1C;
 }
 a:hover{
   color: #1C1C1C;
 }
+
 #lienactu{
   color: #1C1C1C!important; 
 }
