--- a/assets/css/colors/mblue.css
+++ b/assets/css/colors/mblue.css
@@ -11,9 +11,13 @@ a{
 a:hover{
   color: #526b84;
 }
-#MSactu{color: #34495E !important; }
+#MSactu{color: #34495E !important;
+text-shadow: 1px 1px white ; }
 #lienactu{
   color:#34495E!important; 
+}
+.bo4{
+  border: #34495E !important ; 
 }
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #34495E;
