--- a/assets/css/colors/orange.css
+++ b/assets/css/colors/orange.css
@@ -13,9 +13,13 @@ a:hover{
 .collapse .navbar-collapse{
   color: #F60;
 }
-#MSactu{color: #F60 !important; }
+#MSactu{color: #F60 !important;
+text-shadow: 1px 1px white ; }
 #lienactu{
   color:#F60 !important; 
+}
+.bo4{
+  border: #F60 !important; 
 }
 a{
   color: #F60;
