--- a/assets/css/colors/wisteria.css
+++ b/assets/css/colors/wisteria.css
@@ -11,10 +11,14 @@ a{
 a:hover{
 	color: #833da0;
 }
+.bo4{
+  border: #9B59B6 !important; 
+}
 .navbar-engage .dropdown .dropdown-menu > li.active > a{
   color: #9B59B6;
 }
-#MSactu{color: #9B59B6 !important; }
+#MSactu{color: #9B59B6 !important; 
+text-shadow: 1px 1px white ;}
 #lienactu{
   color:#9B59B6 !important; 
 }
