--- a/portf/css/main.css
+++ b/portf/css/main.css
@@ -1891,7 +1891,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .collapse.show {
-  background-color: rgba(4, 9, 30, 0.8);
+  /*background-color: rgba(4, 9, 30, 0.8);*/
   padding: 0px 12px;
 }
 
