--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3603,7 +3603,7 @@ a b.light-color:hover{ text-decoration: none; color: #FFA804; }
 
 b{ font-weight: 600; }
 
-img{ width: 100%; }
+img{ width: 100%;height: 100%; }
 
 li{ list-style: none; display: inline-block; }
 
