--- a/assets/css/colors/orange.css
+++ b/assets/css/colors/orange.css
@@ -18,7 +18,9 @@ text-shadow: 1px 1px white ; }
 #lienactu{
   color:#F60 !important; 
 }
-
+.about:after{
+  background-color:#F60 !important ;
+}
 a{
   color: #F60;
 }
