--- a/assets/css/colors/coffee.css
+++ b/assets/css/colors/coffee.css
@@ -12,6 +12,9 @@ text-shadow: 1px 1px white ;}
 a{
   color: #1C1C1C;
 }
+.about:after{
+  background-color:#1C1C1C !important ;
+}
 a:hover{
   color: #1C1C1C;
 }
