--- a/assets/css/colors/green.css
+++ b/assets/css/colors/green.css
@@ -15,7 +15,7 @@ a:hover{
   color: #526b84;
 }
 #MSactu{color: #34495E !important;
-text-shadow: 1px 1px white ; }
+text-shadow: 2px 2px 4px ##ffffffa1 ; }
 #lienactu{
   color:#34495E!important; 
 }
