--- a/assets/css/colors/greensea.css
+++ b/assets/css/colors/greensea.css
@@ -14,7 +14,7 @@ a:hover{
   color: #0c9d80;
 }
 #MSactu{color: #1ABC9C !important;
-text-shadow: 1px 1px white ; }
+text-shadow: 2px 2px 4px #000000b8 ; }
 #lienactu{
   color:#1ABC9C!important; 
 }
