--- a/assets/css/colors/lightblue.css
+++ b/assets/css/colors/lightblue.css
@@ -9,7 +9,7 @@ a:hover{
   color: #04a8c6;
 }
 #MSactu{color: #00D3F9 !important;
-text-shadow: 1px 1px white ; }
+text-shadow: 2px 2px 4px #000000b8 ; }
 #lienactu{
   color:#00D3F9!important; 
 }
