--- a/assets/css/colors/coffee.css
+++ b/assets/css/colors/coffee.css
@@ -8,7 +8,7 @@
 }
 #sideNav{background-color: #1C1C1C !important;}
 #MSactu{color: #1C1C1C !important; 
-text-shadow: 1px 1px white ;}
+text-shadow: 2px 2px 4px ##ffffffa1 ;}
 a{
   color: #1C1C1C;
 }
