--- a/assets/css/colors/mblue.css
+++ b/assets/css/colors/mblue.css
@@ -8,7 +8,7 @@
 
 #sideNav{background-color: #b2b2b2 !important;}
 #MSactu{color: #b2b2b2 !important;
-text-shadow: 1px 1px white ; }
+text-shadow: 2px 2px 4px #000000b8 ; }
 a{
   color: #9C3;
 }
