--- a/assets/css/colors/wisteria.css
+++ b/assets/css/colors/wisteria.css
@@ -18,7 +18,7 @@ a:hover{
   color: #9B59B6;
 }
 #MSactu{color: #9B59B6 !important; 
-text-shadow: 1px 1px white ;}
+text-shadow: 2px 2px 4px #000000b8 ;}
 #lienactu{
   color:#9B59B6 !important; 
 }
